--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
     "lint": "eslint src/**/*.ts",
-    "pack": "ncc build",
+    "pack": "ncc build src/main.ts -o dist/",
     "test": "jest",
     "all": "npm run build && npm run format && npm run lint && npm run pack && npm test"
   },
@@ -26,11 +26,17 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.4"
+    "@actions/exec": "^1.0.4",
+    "@actions/github": "^2.2.0",
+    "line-column": "^1.0.2",
+    "tmp-promise": "^3.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@types/js-yaml": "^3.12.4",
+    "@types/line-column": "^1.0.0",
     "@types/node": "^12.7.12",
+    "@types/tmp": "^0.2.0",
     "@typescript-eslint/parser": "^2.8.0",
     "@zeit/ncc": "^0.20.5",
     "eslint": "^5.16.0",
@@ -38,7 +44,7 @@
     "eslint-plugin-jest": "^22.21.0",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
-    "js-yaml": "^3.13.1",
+    "js-yaml": "^3.14.0",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
     "typescript": "^3.6.4"
