--- a/package.json
+++ b/package.json
@@ -26,10 +26,7 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.4",
-    "@actions/github": "^2.2.0",
-    "line-column": "^1.0.2",
-    "tmp-promise": "^3.0.2"
+    "line-column": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
