--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/node": "^12.7.12",
     "@types/tmp": "^0.2.0",
     "@typescript-eslint/parser": "^2.8.0",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.25.1",
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^2.0.0",
     "eslint-plugin-jest": "^22.21.0",
